--- a/mta-old.yaml
+++ b/mta-old.yaml
@@ -7,9 +7,9 @@ modules:
   type: nodejs
   path: gen/srv
   requires:
+  - name: TESTING-auth
   - name: TESTING-destination
   - name: TESTING-db
-  - name: TESTING-auth
   provides:
   - name: srv-api
     properties:
@@ -43,20 +43,20 @@ modules:
   - name: TESTING-db
   parameters:
     buildpack: nodejs_buildpack
-- name: TESTING-app-deployer
+- name: TESTING-app-content
   type: com.sap.application.content
   path: .
   requires:
-    - name: TESTING_html5_repo_host
-      parameters:
-        content-target: true
+  - name: TESTING_html_repo_host
+    parameters:
+      content-target: true
   build-parameters:
     build-result: resources/
     requires:
-      - artifacts:
-          - testing.zip
-        name: testing
-        target-path: resources/
+    - artifacts:
+      - testing.zip
+      name: testing
+      target-path: resources/
 - name: testing
   type: html5
   path: app/testing
@@ -67,37 +67,16 @@ modules:
     - npm install
     - npm run build:cf
     supported-platforms: []
-- name: TESTING-destination-content
-  type: com.sap.application.content
-  requires:
-  - name: TESTING-destination
-    parameters:
-      content-target: true
-  - name: TESTING_html5_repo_host
-    parameters:
-      service-key:
-        name: TESTING_html5_repo_host-key
-  - name: TESTING-auth
-    parameters:
-      service-key:
-        name: TESTING-auth-key
-  parameters:
-    content:
-      instance:
-        destinations:
-        - Name: testing_TESTING_ui_TESTING_html5_repo_host
-          ServiceKeyName: TESTING_html5_repo_host-key
-          ServiceInstanceName: TESTING_html5_repo_host
-          sap.cloud.service: testing.ui
-        - Authentication: OAuth2UserTokenExchange
-          Name: testing_ui_TESTING_auth
-          ServiceInstanceName: TESTING-auth
-          ServiceKeyName: TESTING-auth-key
-          sap.cloud.service: testing.ui
-        existing_destinations_policy: ignore
-  build-parameters:
-    no-source: true
 resources:
+- name: TESTING-auth
+  type: org.cloudfoundry.managed-service
+  parameters:
+    config:
+      tenant-mode: dedicated
+      xsappname: TESTING-${org}-${space}
+    path: ./xs-security.json
+    service: xsuaa
+    service-plan: application
 - name: TESTING-destination
   type: org.cloudfoundry.managed-service
   parameters:
@@ -107,17 +86,17 @@ resources:
         instance:
           destinations:
           - Authentication: NoAuthentication
+            Name: ui5
+            ProxyType: Internet
+            Type: HTTP
+            URL: https://ui5.sap.com
+          - Authentication: NoAuthentication
             HTML5.DynamicDestination: true
             HTML5.ForwardAuthToken: true
             Name: TESTING-srv-api
             ProxyType: Internet
             Type: HTTP
             URL: ~{srv-api/srv-url}
-          - Authentication: NoAuthentication
-            Name: ui5
-            ProxyType: Internet
-            Type: HTTP
-            URL: https://ui5.sap.com
           existing_destinations_policy: update
     service: destination
     service-plan: lite
@@ -139,20 +118,11 @@ resources:
       xsappname: TESTING-${org}-${space}
     service: hana
     service-plan: hdi-shared
-- name: TESTING_html5_repo_host
+- name: TESTING_html_repo_host
   type: org.cloudfoundry.managed-service
   parameters:
     service: html5-apps-repo
     service-plan: app-host
-- name: TESTING-auth
-  type: org.cloudfoundry.managed-service
-  parameters:
-    config:
-      tenant-mode: dedicated
-      xsappname: TESTING-${org}-${space}
-    path: ./xs-security.json
-    service: xsuaa
-    service-plan: application
 parameters:
   deploy_mode: html5-repo
   enable-parallel-deployments: true
@@ -162,3 +132,4 @@ build-parameters:
     commands:
     - npm ci
     - npx cds build --production
+    - mkdir -p resources
